--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~41.0.1",
     "expo-constants": "^10.1.3",
     "expo-font": "^9.1.0",
+    "expo-google-app-auth": "^8.1.7",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -23,7 +24,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
     "react-native-web": "~0.13.12",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "sha-1": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
